# kandil-code

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEBUDDY.md  Cargo.toml  Dockerfile  HOSTING_GUIDE.md  PUBLISHING.md  QWEN.md  README.md  RELEASE_PROCESS.md  SECURITY_CONFIG.md  SECURITY_REVIEW.md  deny.toml  kandil.toml  release.toml
.github/workflows/: ci.yml  crates_publish.yml  npm_publish.yml  publish.yml  release.yml
.trae/documents/: Configure Models via Kandil CLI.md  Productionize Kandil CLI_TUI and Templates.md  Productionize Kandil Code CLI_TUI.md  Publish Kandil Code_ Cargo, Releases, Auth, and Rate Limiting.md  Publish Kandil Code_ Staff-Level Review and Implementation Plan.md
docs/: ci_cd.md  quick_start.md  release_management.md
docs/implementation/: KANDIL_CODE_FULL_PLAN.md  PHASE_0_SETUP.md  PHASE_10_OPS_COORD_SIMULATIONS.md  PHASE_12_V2_RELEASE.md  PHASE_1_CLI_AI.md  PHASE_2_TEMPLATES_PLUGINS.md  PHASE_3_TUI_CODE.md  PHASE_4_REFACTOR_TESTS_MODELS.md  PHASE_5_PROJECTS_CLOUD.md  PHASE_6_REQUIREMENTS_DESIGN_AGENTS.md  PHASE_7_CODE_TEST_AGENTS_SIMULATIONS.md  PHASE_8_ADVANCED_AGENTS_REVIEW_DEPLOY.md
docs/implementation/Enhanced_UI/: Complete_Local_Model_Integration_Plan_for_Kandil_Code.md  Kandil_Code_CLI_Superior.md  UX_Plan.md
docs/implementation/Enhanced_UI/Ultimate_UI/: UX_Enhancement_Plan.md
docs/implementation/enhance_model/: Integrating_Qwen_Code_Gemini_CLI_with_Kandil_Code.md  Ultimate_Model_Integration_Plan.md  integarion_local_model.md  integration_local_model_for_all_devices.md
docs/tutorials/: advanced_tutorials.md  onboarding_tutorial.md  quick_start.md
example_plugins/: example.rs
flycheck0/: stderr
kandil_code/: .gitattributes  LICENSE  README.md
kandil_code/src/core/adapters/: mod.rs
kandil_code/src/core/adapters/ai/: mod.rs
kandil_code/src/core/agents/: design.rs  ethics_security.rs  green_dev.rs  maintenance.rs  marketplace.rs  mod.rs  qa.rs  release_manager.rs
kandil_code/src/tui/: events.rs  mod.rs  studio.rs
kandil_code/src/utils/: mod.rs  project_manager.rs  test_generation.rs
kandil_code/templates/flutter/clean_arch/: pubspec.yaml
kandil_code/templates/python/fastapi/app/: main.py
kandil_code/templates/rust/cli/src/: main.rs
kandil_code_implementation_plan/: KANDIL_CODE_FULL_PLAN.md  PHASE_11_ADVANCED_POLISH.md  PHASE_9_SIM_TECH_ROLES.md
npm-wrapper/: package.json
npm-wrapper/scripts/: download-binary.js
pwa/: index.html  manifest.webmanifest  service_worker.js
scripts/: install.bat  install.ps1  install.sh  release.bat  release.sh  release_build.ps1  release_build.sh
src/: main.rs  pwa.rs  web.rs
src/adapters/: mod.rs
src/adapters/ai/: local_llm.rs  mod.rs
src/adapters/edge/: mod.rs
src/adapters/linux/: mod.rs
src/adapters/macos/: mod.rs
src/adapters/mobile/: mod.rs
src/adapters/windows/: mod.rs
src/benchmark/: mod.rs
src/cache/: mod.rs  prefetch.rs  response.rs  semantic.rs
src/cli/: mod.rs  model.rs
src/common/: mod.rs  traits.rs
src/config/: layered.rs  mod.rs
src/core/: auto_config.rs  context_manager.rs  doc_sync.rs  hardware.rs  mod.rs  performance.rs  plugin_marketplace.rs  recording.rs  rollback.rs  strategy.rs  task_complexity.rs  tdd.rs  trust.rs  vision.rs
src/core/adapters/: mod.rs
src/core/adapters/ai/: factory.rs  mod.rs  tracked.rs
src/core/adapters/file/: mod.rs
src/core/adapters/git/: mod.rs
src/core/agents/: a11y.rs  architect.rs  base.rs  code.rs  collaboration.rs  collaboration_realtime.rs  consensus.rs  deployment.rs  design.rs  developer.rs  devops.rs  documentation.rs  enhanced_a11y.rs  ethics_security.rs  green_dev.rs  i18n.rs  ide_extension.rs  maintenance.rs  marketplace.rs  meta.rs  mod.rs  qa.rs  quality_assurance.rs  release_manager.rs  requirements.rs  review.rs  scrum.rs  simulations.rs  test.rs
src/core/prompting/: mod.rs
src/core/recording/: mod.rs
src/enhanced_ui/: adaptive.rs  context.rs  gpu_render.rs  ide_sync.rs  input.rs  mod.rs  persona.rs  predictive.rs  repl.rs  smart_prompt.rs  splash.rs  terminal.rs  thought.rs
src/errors/: mod.rs
src/mobile/: mod.rs
src/models/: catalog.rs  mod.rs  registry.rs
src/monitoring/: circuit_breaker.rs  health.rs  mod.rs  performance.rs
src/performance/: benchmarks.rs  mod.rs
src/security/: credentials.rs  mobile.rs  mod.rs  model.rs  platform.rs
src/shutdown/: mod.rs
src/tui/: events.rs  mod.rs  studio.rs  widgets.rs
src/utils/: cloud_sync.rs  code_analysis.rs  config.rs  cost_tracking.rs  db.rs  mod.rs  ollama.rs  plugins.rs  project_manager.rs  rate_limit.rs  refactoring.rs  templates.rs  test_generation.rs
src/wasm/: bindings.rs  lib.rs  mod.rs
src/web/: dashboard.rs
src/web/static/: index.html
templates/flutter/clean_arch/: pubspec.yaml
templates/flutter/clean_arch/lib/: main.dart
templates/js/nextjs/: Dockerfile  next.config.js  package.json
templates/js/nextjs/pages/: index.js
templates/python/fastapi/: Dockerfile  requirements.txt
templates/python/fastapi/app/: main.py
templates/rust/cli/: Cargo.toml
templates/rust/cli/src/: main.rs
tests/: cli.rs
wasm_build/: README.md
workflows/: ci.yml
